--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
+    "@stitches/react": "^1.2.8",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
