--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@rocketseat/eslint-config": "^2.1.0",
     "@stitches/react": "^1.2.8",
     "next": "14.0.4",
+    "phosphor-icons": "^1.4.2",
     "react": "^18",
     "react-dom": "^18",
     "stitches": "^1.2.11"
